# forgecal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
R/: cal_doe.R  cal_rel.R  cal_spc.R  cal_stat.R  generate_all.R  helpers.R
golden/: latest_certificate.json
golden/doe/: r_reference.json
golden/rel/: r_reference.json
golden/spc/: r_reference.json
golden/stat/: r_reference.json
src/forgecal/: __init__.py  certificate.py  check.py  core.py  discovery.py  drift.py  runner.py  validate.py
tests/: test_core.py
